Fixes to background and input

--- a/index.html
+++ b/index.html
@@ -12,14 +12,13 @@
         src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/versions/generation-v/black-white/4.png"
         class="image"
       />
-      <input type="text" />
+      <input type="text" placeholder="Type a pokemon and press ENTER"/>
       <div class="output">
-        <p>charmander</p>
+        <p>charmander!</p>
       </div>
       <div class="number"></div>
       <div class="pokeNumber">#: 004</div>
       <div class="type">Type: fire</div>
-      <button></button>
     </div>
 
     <script type="module" src="index.js"></script>
